--- a/corona/css/newstyle.css
+++ b/corona/css/newstyle.css
@@ -102,6 +102,7 @@ body {
 	color: #25252a;
 	text-align: left;
 	background-color: none;
+	opacity:0.52;
 }
 .number-font{
 	font-weight:600 !important;
