--- a/corona/css/newstyle.css
+++ b/corona/css/newstyle.css
@@ -101,7 +101,7 @@ body {
 	line-height: 1.5;
 	color: #25252a;
 	text-align: left;
-	background-color: none;
+	background-color: #ffffff;
 	opacity:0.52;
 }
 .number-font{
