--- a/corona/css/newstyle.css
+++ b/corona/css/newstyle.css
@@ -101,8 +101,7 @@ body {
 	line-height: 1.5;
 	color: #25252a;
 	text-align: left;
-	background-color: #ffffff;
-	opacity:0.52;
+	background-color: transparent;
 }
 .number-font{
 	font-weight:600 !important;
